updated code to displey visible lines in table and updated code so diretory to .csv files is correct

--- a/Flask/static/style.css
+++ b/Flask/static/style.css
@@ -29,3 +29,7 @@
     padding: 5px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+table, th, td {
+    border: 1px solid;
+  }
